# python_finance

./: .gitignore  LICENSE  README.rst  pyproject.toml
src/: finance.py
tests/: test_finance.py
