[tool.poetry]
name = "finance"
version = "0.1.0"
description = "Simple finance calculations I always forget"
authors = ["Steve Walker <swalker@walkertek.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
